--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1099,9 +1099,6 @@ select {
 	white-space: nowrap;
 	border-width: 0;
 }
-.static {
-	position: static;
-}
 .fixed {
 	position: fixed;
 }
@@ -1539,6 +1536,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
 }
+.bg-gray-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
 .bg-indigo-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1559,10 +1560,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-gray-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
 .bg-indigo-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(238, 242, 255, var(--tw-bg-opacity));
@@ -1573,6 +1570,15 @@ select {
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-cover {
+	background-size: cover;
+}
+.bg-center {
+	background-position: center;
+}
+.bg-no-repeat {
+	background-repeat: no-repeat;
 }
 .object-cover {
 	-o-object-fit: cover;
@@ -1672,6 +1678,9 @@ select {
 }
 .pt-8 {
 	padding-top: 2rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
