--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1451,6 +1451,9 @@ select {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
+.break-all {
+	word-break: break-all;
+}
 .rounded-md {
 	border-radius: 0.375rem;
 }
