--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,10 +1156,6 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1232,11 +1228,11 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.mt-0 {
-	margin-top: 0px;
-}
 .ml-auto {
 	margin-left: auto;
+}
+.mt-0 {
+	margin-top: 0px;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
@@ -1550,6 +1546,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(185, 28, 28, var(--tw-bg-opacity));
 }
+.bg-gray-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
 .bg-indigo-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1570,10 +1570,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-gray-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
 .bg-indigo-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(238, 242, 255, var(--tw-bg-opacity));
@@ -1584,6 +1580,15 @@ select {
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-cover {
+	background-size: cover;
+}
+.bg-center {
+	background-position: center;
+}
+.bg-no-repeat {
+	background-repeat: no-repeat;
 }
 .object-cover {
 	-o-object-fit: cover;
@@ -1683,6 +1688,9 @@ select {
 }
 .pt-8 {
 	padding-top: 2rem;
+}
+.text-left {
+	text-align: left;
 }
 .text-center {
 	text-align: center;
