--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,10 +1156,6 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1240,6 +1236,9 @@ select {
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .block {
 	display: block;
