Varios Cambios xd xd
HECHO:
- AÃ±adiendo vistas para agregar productos a las sucursales
- CreaciÃ³n de un componente de busqueda para cotizaciÃ³n y ventas
- OptimizaciÃ³n en el tiempo de carga para cotizaciÃ³n y ventas

PENDIENTE (Diosito soy yo de nuevo :c):
- Optimizar series en ventas y terminar lo de aÃadir productos

--- a/resources/views/templates/pdf/style-sale-ticket.css
+++ b/resources/views/templates/pdf/style-sale-ticket.css
@@ -8,10 +8,11 @@ body{
 
 .logo{
     text-align: center;
+    margin-bottom: 2px;
 }
 .logo img{
     display: inline-block;
-    width: 120px;
+    height: 120px;
 }
 .header{
     width: 100%;
