--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,6 +1156,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1183,6 +1187,9 @@ select {
 .mt-1 {
 	margin-top: 0.25rem;
 }
+.ml-2 {
+	margin-left: 0.5rem;
+}
 .mb-6 {
 	margin-bottom: 1.5rem;
 }
@@ -1200,9 +1207,6 @@ select {
 }
 .ml-1 {
 	margin-left: 0.25rem;
-}
-.ml-2 {
-	margin-left: 0.5rem;
 }
 .-mr-0\.5 {
 	margin-right: -0.125rem;
@@ -1225,20 +1229,20 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.ml-auto {
-	margin-left: auto;
-}
 .-mt-px {
 	margin-top: -1px;
+}
+.ml-auto {
+	margin-left: auto;
 }
 .mt-0 {
 	margin-top: 0px;
 }
-.mb-3 {
-	margin-bottom: 0.75rem;
-}
 .mb-2 {
 	margin-bottom: 0.5rem;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
 .block {
 	display: block;
@@ -1288,11 +1292,11 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-auto {
-	height: auto;
-}
 .h-11 {
 	height: 2.75rem;
+}
+.h-auto {
+	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1407,9 +1411,6 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.flex-row {
-	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
