--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1156,10 +1156,6 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1187,9 +1183,6 @@ select {
 .mt-1 {
 	margin-top: 0.25rem;
 }
-.ml-2 {
-	margin-left: 0.5rem;
-}
 .mb-6 {
 	margin-bottom: 1.5rem;
 }
@@ -1207,6 +1200,9 @@ select {
 }
 .ml-1 {
 	margin-left: 0.25rem;
+}
+.ml-2 {
+	margin-left: 0.5rem;
 }
 .-mr-0\.5 {
 	margin-right: -0.125rem;
@@ -1232,17 +1228,17 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.ml-auto {
-	margin-left: auto;
-}
 .mt-0 {
 	margin-top: 0px;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
+.ml-auto {
+	margin-left: auto;
 }
 .mb-3 {
 	margin-bottom: 0.75rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
 }
 .block {
 	display: block;
@@ -1292,11 +1288,11 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-11 {
-	height: 2.75rem;
-}
 .h-auto {
 	height: auto;
+}
+.h-11 {
+	height: 2.75rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1411,6 +1407,9 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-row {
+	flex-direction: row;
 }
 .flex-col {
 	flex-direction: column;
